yapl.output
Terminals unused in grammar

    ITEM


State 0 conflicts: 32 shift/reduce
State 27 conflicts: 1 shift/reduce
State 368 conflicts: 1 shift/reduce
State 441 conflicts: 1 reduce/reduce
State 499 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 slice_item: assignment_expression
   18           | ':'

   19 slice_expression: slice_item
   20                 | slice_expression ',' slice_item

   21 postfix_expression: primary_expression
   22                   | postfix_expression '[' slice_expression ']'
   23                   | postfix_expression '(' ')'
   24                   | postfix_expression '(' argument_expression_list ')'
   25                   | postfix_expression '.' IDENTIFIER
   26                   | postfix_expression PTR_OP IDENTIFIER
   27                   | postfix_expression INC_OP
   28                   | postfix_expression DEC_OP
   29                   | '(' type_name ')' '{' initializer_list '}'
   30                   | '(' type_name ')' '{' initializer_list ',' '}'

   31 argument_expression_list: assignment_expression
   32                         | argument_expression_list ',' assignment_expression

   33 unary_expression: postfix_expression
   34                 | INC_OP unary_expression
   35                 | DEC_OP unary_expression
   36                 | unary_operator cast_expression
   37                 | SIZEOF unary_expression
   38                 | SIZEOF '(' type_name ')'
   39                 | ALIGNOF '(' type_name ')'

   40 unary_operator: '&'
   41               | '*'
   42               | '+'
   43               | '-'
   44               | '~'
   45               | '!'

   46 cast_expression: unary_expression
   47                | '(' type_name ')' cast_expression

   48 multiplicative_expression: cast_expression
   49                          | multiplicative_expression '*' cast_expression
   50                          | multiplicative_expression '/' cast_expression
   51                          | multiplicative_expression '%' cast_expression
   52                          | multiplicative_expression DOT_MUL cast_expression
   53                          | multiplicative_expression DOT_DIV cast_expression
   54                          | multiplicative_expression AT cast_expression
   55                          | multiplicative_expression AT_MUL cast_expression

   56 additive_expression: multiplicative_expression
   57                    | additive_expression '+' multiplicative_expression
   58                    | additive_expression '-' multiplicative_expression
   59                    | additive_expression DOT_ADD multiplicative_expression
   60                    | additive_expression DOT_SUB multiplicative_expression

   61 shift_expression: additive_expression
   62                 | shift_expression LEFT_OP additive_expression
   63                 | shift_expression RIGHT_OP additive_expression

   64 relational_expression: shift_expression
   65                      | relational_expression '<' shift_expression
   66                      | relational_expression '>' shift_expression
   67                      | relational_expression LE_OP shift_expression
   68                      | relational_expression GE_OP shift_expression
   69                      | relational_expression TH_OP shift_expression

   70 equality_expression: relational_expression
   71                    | equality_expression EQ_OP relational_expression
   72                    | equality_expression NE_OP relational_expression

   73 and_expression: equality_expression
   74               | and_expression '&' equality_expression

   75 exclusive_or_expression: and_expression
   76                        | exclusive_or_expression '^' and_expression

   77 inclusive_or_expression: exclusive_or_expression
   78                        | inclusive_or_expression '|' exclusive_or_expression

   79 logical_and_expression: inclusive_or_expression
   80                       | logical_and_expression AND_OP inclusive_or_expression

   81 logical_or_expression: logical_and_expression
   82                      | logical_or_expression OR_OP logical_and_expression

   83 conditional_expression: logical_or_expression

   84 assignment_expression: conditional_expression
   85                      | unary_expression assignment_operator assignment_expression

   86 assignment_operator: '='
   87                    | MUL_ASSIGN
   88                    | DIV_ASSIGN
   89                    | MOD_ASSIGN
   90                    | ADD_ASSIGN
   91                    | SUB_ASSIGN
   92                    | LEFT_ASSIGN
   93                    | RIGHT_ASSIGN
   94                    | AND_ASSIGN
   95                    | XOR_ASSIGN
   96                    | OR_ASSIGN

   97 expression: assignment_expression
   98           | expression ',' assignment_expression

   99 constant_expression: conditional_expression

  100 declaration: declaration_specifiers ';'
  101            | declaration_specifiers init_declarator_list ';'
  102            | static_assert_declaration

  103 declaration_specifiers: storage_class_specifier declaration_specifiers
  104                       | storage_class_specifier
  105                       | type_specifier declaration_specifiers
  106                       | type_specifier
  107                       | type_qualifier declaration_specifiers
  108                       | type_qualifier
  109                       | function_specifier declaration_specifiers
  110                       | function_specifier
  111                       | alignment_specifier declaration_specifiers
  112                       | alignment_specifier

  113 init_declarator_list: init_declarator
  114                     | init_declarator_list ',' init_declarator

  115 init_declarator: declarator '=' initializer
  116                | declarator

  117 storage_class_specifier: TYPEDEF
  118                        | EXTERN
  119                        | STATIC
  120                        | THREAD_LOCAL
  121                        | AUTO
  122                        | REGISTER

  123 type_specifier: VOID
  124               | CHAR
  125               | SHORT
  126               | INT
  127               | LONG
  128               | FP
  129               | DOUBLE
  130               | SIGNED
  131               | UNSIGNED
  132               | TEXT
  133               | tensor_type
  134               | BOOL
  135               | COMPLEX
  136               | IMAGINARY
  137               | atomic_type_specifier
  138               | struct_or_union_specifier
  139               | enum_specifier
  140               | TYPEDEF_NAME

  141 tensor_type: TENSOR '<' tensor_params '>'

  142 tensor_params: type_specifier ',' dimension_list

  143 loop_label: BACKTICK IDENTIFIER ':'

  144 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  145                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  146                          | struct_or_union IDENTIFIER

  147 struct_or_union: STRUCT
  148                | UNION

  149 struct_declaration_list: struct_declaration
  150                        | struct_declaration_list struct_declaration

  151 struct_declaration: specifier_qualifier_list ';'
  152                   | specifier_qualifier_list struct_declarator_list ';'
  153                   | static_assert_declaration

  154 specifier_qualifier_list: type_specifier specifier_qualifier_list
  155                         | type_specifier
  156                         | type_qualifier specifier_qualifier_list
  157                         | type_qualifier

  158 struct_declarator_list: struct_declarator
  159                       | struct_declarator_list ',' struct_declarator

  160 struct_declarator: ':' constant_expression
  161                  | declarator ':' constant_expression
  162                  | declarator '=' initializer
  163                  | declarator

  164 enum_specifier: ENUM '{' enumerator_list '}'
  165               | ENUM '{' enumerator_list ',' '}'
  166               | ENUM IDENTIFIER '{' enumerator_list '}'
  167               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  168               | ENUM IDENTIFIER

  169 enumerator_list: enumerator
  170                | enumerator_list ',' enumerator

  171 enumerator: enumeration_constant '=' constant_expression
  172           | enumeration_constant

  173 atomic_type_specifier: ATOMIC '(' type_name ')'

  174 type_qualifier: CONST
  175               | RESTRICT
  176               | VOLATILE
  177               | ATOMIC

  178 function_specifier: INLINE
  179                   | NORETURN

  180 alignment_specifier: ALIGNAS '(' type_name ')'
  181                    | ALIGNAS '(' constant_expression ')'

  182 $@1: ε

  183 declarator: pointer $@1 direct_declarator
  184           | direct_declarator

  185 direct_declarator: IDENTIFIER
  186                  | '(' declarator ')'
  187                  | direct_declarator '[' ']'
  188                  | direct_declarator '[' '*' ']'
  189                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  190                  | direct_declarator '[' STATIC assignment_expression ']'
  191                  | direct_declarator '[' type_qualifier_list '*' ']'
  192                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  193                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  194                  | direct_declarator '[' type_qualifier_list ']'
  195                  | direct_declarator '[' assignment_expression ']'
  196                  | direct_declarator '(' parameter_type_list ')'
  197                  | direct_declarator '(' ')'
  198                  | direct_declarator '(' identifier_list ')'

  199 pointer: '*' type_qualifier_list pointer
  200        | '*' type_qualifier_list
  201        | '*' pointer
  202        | '*'

  203 type_qualifier_list: type_qualifier
  204                    | type_qualifier_list type_qualifier

  205 parameter_type_list: parameter_list ',' ELLIPSIS
  206                    | parameter_list

  207 parameter_list: parameter_declaration
  208               | parameter_list ',' parameter_declaration
  209               | parameter_list ',' ELLIPSIS

  210 parameter_declaration: declaration_specifiers declarator
  211                      | declaration_specifiers abstract_declarator
  212                      | declaration_specifiers

  213 identifier_list: IDENTIFIER
  214                | identifier_list ',' IDENTIFIER

  215 type_name: specifier_qualifier_list abstract_declarator
  216          | specifier_qualifier_list

  217 abstract_declarator: pointer direct_abstract_declarator
  218                    | pointer
  219                    | direct_abstract_declarator

  220 direct_abstract_declarator: '(' abstract_declarator ')'
  221                           | '[' ']'
  222                           | '[' '*' ']'
  223                           | '[' STATIC type_qualifier_list assignment_expression ']'
  224                           | '[' STATIC assignment_expression ']'
  225                           | '[' type_qualifier_list STATIC assignment_expression ']'
  226                           | '[' type_qualifier_list assignment_expression ']'
  227                           | '[' type_qualifier_list ']'
  228                           | '[' assignment_expression ']'
  229                           | direct_abstract_declarator '[' ']'
  230                           | direct_abstract_declarator '[' '*' ']'
  231                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  232                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  233                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  234                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  235                           | direct_abstract_declarator '[' type_qualifier_list ']'
  236                           | direct_abstract_declarator '[' assignment_expression ']'
  237                           | '(' ')'
  238                           | '(' parameter_type_list ')'
  239                           | direct_abstract_declarator '(' ')'
  240                           | direct_abstract_declarator '(' parameter_type_list ')'

  241 initializer: '{' initializer_list '}'
  242            | '{' initializer_list ',' '}'
  243            | assignment_expression

  244 initializer_list: designation initializer
  245                 | initializer
  246                 | initializer_list ',' designation initializer
  247                 | initializer_list ',' initializer

  248 designation: designator_list '='

  249 designator_list: designator
  250                | designator_list designator

  251 designator: '[' constant_expression ']'
  252           | '.' IDENTIFIER

  253 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  254 statement: labeled_statement
  255          | compound_statement
  256          | expression_statement
  257          | selection_statement
  258          | iteration_statement
  259          | jump_statement

  260 labeled_statement: IDENTIFIER ':' statement
  261                  | CASE constant_expression ':' statement
  262                  | DEFAULT ':' statement

  263 compound_statement: '{' '}'
  264                   | '{' block_item_list '}'

  265 block_item_list: block_item
  266                | block_item_list block_item

  267 block_item: declaration
  268           | statement

  269 expression_statement: ';'
  270                     | expression ';'

  271 $@2: ε

  272 selection_statement: IF '(' expression ')' statement ELSE $@2 statement
  273                    | IF '(' expression ')' statement
  274                    | SWITCH '(' expression ')' statement

  275 loop_statement: WHILE '(' expression ')' statement
  276               | DO statement WHILE '(' expression ')' ';'
  277               | FOR '(' expression_statement expression_statement ')' statement
  278               | FOR '(' expression_statement expression_statement expression ')' statement
  279               | FOR '(' declaration expression_statement ')' statement
  280               | FOR '(' declaration expression_statement expression ')' statement
  281               | FOR IDENTIFIER IN IDENTIFIER axis_clause compound_statement

  282 iteration_statement: loop_statement
  283                    | loop_label loop_statement

  284 axis_clause: ε
  285            | AXIS '(' axis_list ')'

  286 axis_list: I_CONSTANT
  287          | axis_list ',' I_CONSTANT

  288 dimension_list: I_CONSTANT
  289               | dimension_list ',' I_CONSTANT

  290 jump_statement: GOTO IDENTIFIER ';'
  291               | CONTINUE ';'
  292               | CONTINUE IDENTIFIER ';'
  293               | BREAK ';'
  294               | BREAK IDENTIFIER ';'
  295               | RETURN ';'
  296               | RETURN expression ';'

  297 translation_unit: ε
  298                 | external_declaration
  299                 | translation_unit external_declaration

  300 external_declaration: function_definition
  301                     | declaration

  302 function_definition: declaration_specifiers declarator declaration_list compound_statement
  303                    | declaration_specifiers declarator compound_statement

  304 declaration_list: declaration
  305                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 45
    '%' (37) 51
    '&' (38) 40 74
    '(' (40) 4 12 23 24 29 30 38 39 47 173 180 181 186 196 197 198 220 237 238 239 240 253 272 273 274 275 276 277 278 279 280 285
    ')' (41) 4 12 23 24 29 30 38 39 47 173 180 181 186 196 197 198 220 237 238 239 240 253 272 273 274 275 276 277 278 279 280 285
    '*' (42) 41 49 188 191 199 200 201 202 222 230
    '+' (43) 42 57
    ',' (44) 12 14 20 30 32 98 114 142 159 165 167 170 205 208 209 214 242 246 247 253 287 289
    '-' (45) 43 58
    '.' (46) 25 252
    '/' (47) 50
    ':' (58) 15 16 18 143 160 161 260 261 262
    ';' (59) 100 101 151 152 253 269 270 276 290 291 292 293 294 295 296
    '<' (60) 65 141
    '=' (61) 86 115 162 171 248
    '>' (62) 66 141
    '[' (91) 22 187 188 189 190 191 192 193 194 195 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 251
    ']' (93) 22 187 188 189 190 191 192 193 194 195 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 251
    '^' (94) 76
    '{' (123) 29 30 144 145 164 165 166 167 241 242 263 264
    '|' (124) 78
    '}' (125) 29 30 144 145 164 165 166 167 241 242 263 264
    '~' (126) 44
    error (256)
    IDENTIFIER (258) 1 9 25 26 143 145 146 166 167 168 185 213 214 252 260 281 290 292 294
    I_CONSTANT (259) 6 286 287 288 289
    F_CONSTANT (260) 7
    STRING_LITERAL (261) 10 253
    FUNC_NAME (262) 11
    SIZEOF (263) 37 38
    PTR_OP (264) 26
    INC_OP (265) 27 34
    DEC_OP (266) 28 35
    LEFT_OP (267) 62
    RIGHT_OP (268) 63
    LE_OP (269) 67
    GE_OP (270) 68
    EQ_OP (271) 71
    NE_OP (272) 72
    TH_OP (273) 69
    AND_OP (274) 80
    OR_OP (275) 82
    MUL_ASSIGN (276) 87
    DIV_ASSIGN (277) 88
    MOD_ASSIGN (278) 89
    ADD_ASSIGN (279) 90
    SUB_ASSIGN (280) 91
    LEFT_ASSIGN (281) 92
    RIGHT_ASSIGN (282) 93
    AND_ASSIGN (283) 94
    XOR_ASSIGN (284) 95
    OR_ASSIGN (285) 96
    TYPEDEF_NAME (286) 140
    ENUMERATION_CONSTANT (287) 8
    TYPEDEF (288) 117
    EXTERN (289) 118
    STATIC (290) 119 189 190 192 223 224 225 231 232 234
    AUTO (291) 121
    REGISTER (292) 122
    INLINE (293) 178
    CONST (294) 174
    RESTRICT (295) 175
    VOLATILE (296) 176
    BOOL (297) 134
    CHAR (298) 124
    SHORT (299) 125
    INT (300) 126
    LONG (301) 127
    SIGNED (302) 130
    UNSIGNED (303) 131
    FP (304) 128
    DOUBLE (305) 129
    VOID (306) 123
    COMPLEX (307) 135
    IMAGINARY (308) 136
    STRUCT (309) 147
    UNION (310) 148
    ENUM (311) 164 165 166 167 168
    ELLIPSIS (312) 205 209
    CASE (313) 261
    DEFAULT (314) 16 262
    IF (315) 272 273
    ELSE (316) 272
    SWITCH (317) 274
    WHILE (318) 275 276
    DO (319) 276
    FOR (320) 277 278 279 280 281
    GOTO (321) 290
    CONTINUE (322) 291 292
    BREAK (323) 293 294
    RETURN (324) 295 296
    ALIGNAS (325) 180 181
    ALIGNOF (326) 39
    ATOMIC (327) 173 177
    GENERIC (328) 12
    NORETURN (329) 179
    STATIC_ASSERT (330) 253
    THREAD_LOCAL (331) 120
    TEXT (332) 132
    TENSOR (333) 141
    ITEM (334)
    AXIS (335) 285
    IN (336) 281
    DOT_ADD (337) 59
    DOT_SUB (338) 60
    DOT_MUL (339) 52
    DOT_DIV (340) 53
    AT (341) 54
    AT_MUL (342) 55
    BACKTICK (343) 143


Nonterminals, with rules where they appear

    $accept (112)
        on left: 0
    primary_expression (113)
        on left: 1 2 3 4 5
        on right: 21
    constant (114)
        on left: 6 7 8
        on right: 2
    enumeration_constant (115)
        on left: 9
        on right: 171 172
    string (116)
        on left: 10 11
        on right: 3
    generic_selection (117)
        on left: 12
        on right: 5
    generic_assoc_list (118)
        on left: 13 14
        on right: 12 14
    generic_association (119)
        on left: 15 16
        on right: 13 14
    slice_item <ival> (120)
        on left: 17 18
        on right: 19 20
    slice_expression <ival> (121)
        on left: 19 20
        on right: 20 22
    postfix_expression (122)
        on left: 21 22 23 24 25 26 27 28 29 30
        on right: 22 23 24 25 26 27 28 33
    argument_expression_list (123)
        on left: 31 32
        on right: 24 32
    unary_expression (124)
        on left: 33 34 35 36 37 38 39
        on right: 34 35 37 46 85
    unary_operator (125)
        on left: 40 41 42 43 44 45
        on right: 36
    cast_expression (126)
        on left: 46 47
        on right: 36 47 48 49 50 51 52 53 54 55
    multiplicative_expression (127)
        on left: 48 49 50 51 52 53 54 55
        on right: 49 50 51 52 53 54 55 56 57 58 59 60
    additive_expression (128)
        on left: 56 57 58 59 60
        on right: 57 58 59 60 61 62 63
    shift_expression (129)
        on left: 61 62 63
        on right: 62 63 64 65 66 67 68 69
    relational_expression (130)
        on left: 64 65 66 67 68 69
        on right: 65 66 67 68 69 70 71 72
    equality_expression (131)
        on left: 70 71 72
        on right: 71 72 73 74
    and_expression (132)
        on left: 73 74
        on right: 74 75 76
    exclusive_or_expression (133)
        on left: 75 76
        on right: 76 77 78
    inclusive_or_expression (134)
        on left: 77 78
        on right: 78 79 80
    logical_and_expression (135)
        on left: 79 80
        on right: 80 81 82
    logical_or_expression (136)
        on left: 81 82
        on right: 82 83
    conditional_expression (137)
        on left: 83
        on right: 84 99
    assignment_expression (138)
        on left: 84 85
        on right: 12 15 16 17 31 32 85 97 98 189 190 192 193 195 223 224 225 226 228 231 232 233 234 236 243
    assignment_operator (139)
        on left: 86 87 88 89 90 91 92 93 94 95 96
        on right: 85
    expression (140)
        on left: 97 98
        on right: 4 98 270 272 273 274 275 276 278 280 296
    constant_expression (141)
        on left: 99
        on right: 160 161 171 181 251 253 261
    declaration (142)
        on left: 100 101 102
        on right: 267 279 280 301 304 305
    declaration_specifiers (143)
        on left: 103 104 105 106 107 108 109 110 111 112
        on right: 100 101 103 105 107 109 111 210 211 212 302 303
    init_declarator_list (144)
        on left: 113 114
        on right: 101 114
    init_declarator (145)
        on left: 115 116
        on right: 113 114
    storage_class_specifier (146)
        on left: 117 118 119 120 121 122
        on right: 103 104
    type_specifier (147)
        on left: 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140
        on right: 105 106 142 154 155
    tensor_type (148)
        on left: 141
        on right: 133
    tensor_params (149)
        on left: 142
        on right: 141
    loop_label (150)
        on left: 143
        on right: 283
    struct_or_union_specifier (151)
        on left: 144 145 146
        on right: 138
    struct_or_union (152)
        on left: 147 148
        on right: 144 145 146
    struct_declaration_list (153)
        on left: 149 150
        on right: 144 145 150
    struct_declaration (154)
        on left: 151 152 153
        on right: 149 150
    specifier_qualifier_list (155)
        on left: 154 155 156 157
        on right: 151 152 154 156 215 216
    struct_declarator_list (156)
        on left: 158 159
        on right: 152 159
    struct_declarator (157)
        on left: 160 161 162 163
        on right: 158 159
    enum_specifier (158)
        on left: 164 165 166 167 168
        on right: 139
    enumerator_list (159)
        on left: 169 170
        on right: 164 165 166 167 170
    enumerator (160)
        on left: 171 172
        on right: 169 170
    atomic_type_specifier (161)
        on left: 173
        on right: 137
    type_qualifier (162)
        on left: 174 175 176 177
        on right: 107 108 156 157 203 204
    function_specifier (163)
        on left: 178 179
        on right: 109 110
    alignment_specifier (164)
        on left: 180 181
        on right: 111 112
    declarator (165)
        on left: 183 184
        on right: 115 116 161 162 163 186 210 302 303
    $@1 (166)
        on left: 182
        on right: 183
    direct_declarator (167)
        on left: 185 186 187 188 189 190 191 192 193 194 195 196 197 198
        on right: 183 184 187 188 189 190 191 192 193 194 195 196 197 198
    pointer (168)
        on left: 199 200 201 202
        on right: 183 199 201 217 218
    type_qualifier_list (169)
        on left: 203 204
        on right: 189 191 192 193 194 199 200 204 223 225 226 227 231 233 234 235
    parameter_type_list (170)
        on left: 205 206
        on right: 196 238 240
    parameter_list (171)
        on left: 207 208 209
        on right: 205 206 208 209
    parameter_declaration (172)
        on left: 210 211 212
        on right: 207 208
    identifier_list (173)
        on left: 213 214
        on right: 198 214
    type_name (174)
        on left: 215 216
        on right: 15 29 30 38 39 47 173 180
    abstract_declarator (175)
        on left: 217 218 219
        on right: 211 215 220
    direct_abstract_declarator (176)
        on left: 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240
        on right: 217 219 229 230 231 232 233 234 235 236 239 240
    initializer (177)
        on left: 241 242 243
        on right: 115 162 244 245 246 247
    initializer_list (178)
        on left: 244 245 246 247
        on right: 29 30 241 242 246 247
    designation (179)
        on left: 248
        on right: 244 246
    designator_list (180)
        on left: 249 250
        on right: 248 250
    designator (181)
        on left: 251 252
        on right: 249 250
    static_assert_declaration (182)
        on left: 253
        on right: 102 153
    statement (183)
        on left: 254 255 256 257 258 259
        on right: 260 261 262 268 272 273 274 275 276 277 278 279 280
    labeled_statement (184)
        on left: 260 261 262
        on right: 254
    compound_statement (185)
        on left: 263 264
        on right: 255 281 302 303
    block_item_list (186)
        on left: 265 266
        on right: 264 266
    block_item (187)
        on left: 267 268
        on right: 265 266
    expression_statement (188)
        on left: 269 270
        on right: 256 277 278 279 280
    selection_statement (189)
        on left: 272 273 274
        on right: 257
    $@2 (190)
        on left: 271
        on right: 272
    loop_statement (191)
        on left: 275 276 277 278 279 280 281
        on right: 282 283
    iteration_statement (192)
        on left: 282 283
        on right: 258
    axis_clause (193)
        on left: 284 285
        on right: 281
    axis_list (194)
        on left: 286 287
        on right: 285 287
    dimension_list (195)
        on left: 288 289
        on right: 142 289
    jump_statement (196)
        on left: 290 291 292 293 294 295 296
        on right: 259
    translation_unit (197)
        on left: 297 298 299
        on right: 0 299
    external_declaration (198)
        on left: 300 301
        on right: 298 299
    function_definition (199)
        on left: 302 303
        on right: 300
    declaration_list (200)
        on left: 304 305
        on right: 302 305


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FP             shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30
    TEXT           shift, and go to state 31
    TENSOR         shift, and go to state 32

    TYPEDEF_NAME   [reduce using rule 297 (translation_unit)]
    TYPEDEF        [reduce using rule 297 (translation_unit)]
    EXTERN         [reduce using rule 297 (translation_unit)]
    STATIC         [reduce using rule 297 (translation_unit)]
    AUTO           [reduce using rule 297 (translation_unit)]
    REGISTER       [reduce using rule 297 (translation_unit)]
    INLINE         [reduce using rule 297 (translation_unit)]
    CONST          [reduce using rule 297 (translation_unit)]
    RESTRICT       [reduce using rule 297 (translation_unit)]
    VOLATILE       [reduce using rule 297 (translation_unit)]
    BOOL           [reduce using rule 297 (translation_unit)]
    CHAR           [reduce using rule 297 (translation_unit)]
    SHORT          [reduce using rule 297 (translation_unit)]
    INT            [reduce using rule 297 (translation_unit)]
    LONG           [reduce using rule 297 (translation_unit)]
    SIGNED         [reduce using rule 297 (translation_unit)]
    UNSIGNED       [reduce using rule 297 (translation_unit)]
    FP             [reduce using rule 297 (translation_unit)]
    DOUBLE         [reduce using rule 297 (translation_unit)]
    VOID           [reduce using rule 297 (translation_unit)]
    COMPLEX        [reduce using rule 297 (translation_unit)]
    IMAGINARY      [reduce using rule 297 (translation_unit)]
    STRUCT         [reduce using rule 297 (translation_unit)]
    UNION          [reduce using rule 297 (translation_unit)]
    ENUM           [reduce using rule 297 (translation_unit)]
    ALIGNAS        [reduce using rule 297 (translation_unit)]
    ATOMIC         [reduce using rule 297 (translation_unit)]
    NORETURN       [reduce using rule 297 (translation_unit)]
    STATIC_ASSERT  [reduce using rule 297 (translation_unit)]
    THREAD_LOCAL   [reduce using rule 297 (translation_unit)]
    TEXT           [reduce using rule 297 (translation_unit)]
    TENSOR         [reduce using rule 297 (translation_unit)]
    $default       reduce using rule 297 (translation_unit)

    declaration                go to state 33
    declaration_specifiers     go to state 34
    storage_class_specifier    go to state 35
    type_specifier             go to state 36
    tensor_type                go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 40
    atomic_type_specifier      go to state 41
    type_qualifier             go to state 42
    function_specifier         go to state 43
    alignment_specifier        go to state 44
    static_assert_declaration  go to state 45
    translation_unit           go to state 46
    external_declaration       go to state 47
    function_definition        go to state 48


State 1

  140 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 140 (type_specifier)


State 2

  117 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 117 (storage_class_specifier)


State 3

  118 storage_class_specifier: EXTERN •

    $default  reduce using rule 118 (storage_class_specifier)


State 4

  119 storage_class_specifier: STATIC •

    $default  reduce using rule 119 (storage_class_specifier)


State 5

  121 storage_class_specifier: AUTO •

    $default  reduce using rule 121 (storage_class_specifier)


State 6

  122 storage_class_specifier: REGISTER •

    $default  reduce using rule 122 (storage_class_specifier)


State 7

  178 function_specifier: INLINE •

    $default  reduce using rule 178 (function_specifier)


State 8

  174 type_qualifier: CONST •

    $default  reduce using rule 174 (type_qualifier)


State 9

  175 type_qualifier: RESTRICT •

    $default  reduce using rule 175 (type_qualifier)


State 10

  176 type_qualifier: VOLATILE •

    $default  reduce using rule 176 (type_qualifier)


State 11

  134 type_specifier: BOOL •

    $default  reduce using rule 134 (type_specifier)


State 12

  124 type_specifier: CHAR •

    $default  reduce using rule 124 (type_specifier)


State 13

  125 type_specifier: SHORT •

    $default  reduce using rule 125 (type_specifier)


State 14

  126 type_specifier: INT •

    $default  reduce using rule 126 (type_specifier)


State 15

  127 type_specifier: LONG •

    $default  reduce using rule 127 (type_specifier)


State 16

  130 type_specifier: SIGNED •

    $default  reduce using rule 130 (type_specifier)


State 17

  131 type_specifier: UNSIGNED •

    $default  reduce using rule 131 (type_specifier)


State 18

  128 type_specifier: FP •

    $default  reduce using rule 128 (type_specifier)


State 19

  129 type_specifier: DOUBLE •

    $default  reduce using rule 129 (type_specifier)


State 20

  123 type_specifier: VOID •

    $default  reduce using rule 123 (type_specifier)


State 21

  135 type_specifier: COMPLEX •

    $default  reduce using rule 135 (type_specifier)


State 22

  136 type_specifier: IMAGINARY •

    $default  reduce using rule 136 (type_specifier)


State 23

  147 struct_or_union: STRUCT •

    $default  reduce using rule 147 (struct_or_union)


State 24

  148 struct_or_union: UNION •

    $default  reduce using rule 148 (struct_or_union)


State 25

  164 enum_specifier: ENUM • '{' enumerator_list '}'
  165               | ENUM • '{' enumerator_list ',' '}'
  166               | ENUM • IDENTIFIER '{' enumerator_list '}'
  167               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  168               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 49
    '{'         shift, and go to state 50


State 26

  180 alignment_specifier: ALIGNAS • '(' type_name ')'
  181                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 51


State 27

  173 atomic_type_specifier: ATOMIC • '(' type_name ')'
  177 type_qualifier: ATOMIC •

    '('  shift, and go to state 52

    '('       [reduce using rule 177 (type_qualifier)]
    $default  reduce using rule 177 (type_qualifier)


State 28

  179 function_specifier: NORETURN •

    $default  reduce using rule 179 (function_specifier)


State 29

  253 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 53


State 30

  120 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 120 (storage_class_specifier)


State 31

  132 type_specifier: TEXT •

    $default  reduce using rule 132 (type_specifier)


State 32

  141 tensor_type: TENSOR • '<' tensor_params '>'

    '<'  shift, and go to state 54


State 33

  301 external_declaration: declaration •

    $default  reduce using rule 301 (external_declaration)


State 34

  100 declaration: declaration_specifiers • ';'
  101            | declaration_specifiers • init_declarator_list ';'
  302 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  303                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 55
    '('         shift, and go to state 56
    '*'         shift, and go to state 57
    ';'         shift, and go to state 58

    init_declarator_list  go to state 59
    init_declarator       go to state 60
    declarator            go to state 61
    direct_declarator     go to state 62
    pointer               go to state 63


State 35

  103 declaration_specifiers: storage_class_specifier • declaration_specifiers
  104                       | storage_class_specifier •
